# melisandre

./: CMakeLists.txt  README.md  imgui_style.txt  todo.txt
applications/: CMakeLists.txt
applications/melisandre-tests/: CMakeLists.txt
applications/melisandre-tests/src/: main.cpp  utils.hpp
applications/melisandre-tests/src/maths/mappings/: spherical_mappings.cpp
applications/melisandre-tests/src/maths/sampling/: spherical_triangle.cpp
applications/melisandre-viewer/: CMakeLists.txt
applications/melisandre-viewer/src/: ComputeGraph.cpp  ComputeGraph.hpp  main.cpp
cmake/: c2ba-glsl-shaders.cmake  c2ba-group-sources.cmake
melisandre/: CMakeLists.txt
melisandre/glsl/: red.fs.glsl
melisandre/src/melisandre/: melisandre.cpp  melisandre.hpp  types.hpp
melisandre/src/melisandre/image/: Image.cpp  Image.hpp
melisandre/src/melisandre/itertools/: index.hpp  iterator_extractor.hpp  itertools.hpp  range.hpp
melisandre/src/melisandre/maths/: BBox.hpp  aabb.hpp  colors.hpp  common.hpp  constants.hpp  geometry.hpp  glm.hpp  maths.cpp  maths.hpp  numeric.hpp  types.hpp
melisandre/src/melisandre/maths/mappings/: dual_paraboloid_mappings.hpp  hemispherical_mappings.hpp  image_mappings.hpp  paraboloid_mappings.hpp  spherical_mappings.hpp
melisandre/src/melisandre/maths/sampling/: DiscreteDistribution.hpp  Random.hpp  Sample.hpp  distribution1d.cpp  distribution1d.h  distribution2d.cpp  distribution2d.h  measures.hpp  multiple_importance_sampling.hpp  patterns.hpp  shapes.cpp  shapes.hpp
melisandre/src/melisandre/opengl/: GLFlatShadingPass.cpp  GLFlatShadingPass.hpp  GLForwardFlatRenderPass.cpp  GLForwardFlatRenderPass.hpp  GLGBuffer.hpp  GLGBufferRenderPass.cpp  GLGBufferRenderPass.hpp  GLImageRenderer.cpp  GLImageRenderer.hpp  GLScene.cpp  GLScene.hpp  GLScreenFramebuffer.cpp  GLScreenFramebuffer.hpp  GLShaderManager.cpp  GLShaderManager.hpp  opengl.cpp  opengl.hpp
melisandre/src/melisandre/opengl/cube_mapping/: GLCubeMapContainer.hpp  GLCubeMapRenderPass.hpp  GLCubeMappingMVPMatrixBufferComputePass.hpp  GLVirtualCubeMapContainer.hpp  GLVirtualCubeMapRenderPass.hpp
melisandre/src/melisandre/opengl/debug/: GLDebugObject.cpp  GLDebugObject.hpp  GLDebugRenderer.cpp  GLDebugRenderer.hpp  GLDebugStream.cpp  GLDebugStream.hpp
melisandre/src/melisandre/opengl/lighting/: GLDirectLightShadingPass.hpp  GLPointLightsData.hpp
melisandre/src/melisandre/opengl/shaders/: flatDeferredShadingPass.fs
melisandre/src/melisandre/opengl/utils/: GLBindlessTexture.hpp  GLBuffer.hpp  GLCubeFramebuffer.hpp  GLFramebuffer.hpp  GLNVShaderBufferLoad.hpp  GLObject.hpp  GLProgram.hpp  GLQuery.cpp  GLQuery.hpp  GLShader.hpp  GLState.hpp  GLTexture.hpp  GLUniform.hpp  GLVertexArray.hpp  GLutils.hpp  glGet.cpp  glGet.hpp
melisandre/src/melisandre/system/: DebugLog.cpp  DebugLog.hpp  files.cpp  files.hpp  logging.cpp  logging.hpp  memory.hpp  threads.cpp  threads.hpp  time.cpp  time.hpp
melisandre/src/melisandre/utils/: ColorMap.cpp  ColorMap.hpp  CubeMapUtils.cpp  CubeMapUtils.hpp  DijkstraAlgorithm.hpp  EventDispatcher.hpp  Graph.hpp  Grid3D.hpp  HashGrid.hpp  KdTree.hpp  MultiDimensionalArray.hpp  RAII.hpp  UnionFind.hpp
melisandre/src/melisandre/viewer/: ViewController.cpp  ViewController.hpp  WindowManager.cpp  WindowManager.hpp  gui.hpp
melisandre/src/melisandre/viewer/imgui/: imgui_demo.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h
